2019-04-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Recognize "factor" and "expand" commands at the beginning of the expression
	* Change order of operations for logical and bitwise operators to better match C operator precedence
	* Always show spaces around spelled out logical operators
	* Bitwise XOR operator
	* Add alternative unicode symbols for bitwise and, or, exclusive or and not
	* Caret as XOR option in qalc

2019-04-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix factorization with uncalculated power of number (do not factorize)
	* Fix explicit mixed units conversion when automatic mixed units conversion is disabled
	* Fix "set autoconversion 0" in qalc (deactivate mixed units conversion)
	* Fix segfault on factorization of "167772160y^4 − 41607495680y^2 − 11748245499y − 2147483648"

2019-04-23 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Accept date and time separated by space instead of 'T'
	* Remove old SI definitions
	* uptime variable
	* Increase precision of "now"
	* Always truncate seconds in output date and time
	* Improve output of factorized result with approximately displayed values

2019-04-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improved simplification (polynomial long division) and factorization
	* Allow vector of values in replace()
	* Fix represents number test (should be either non-zero base OR, not AND, positive exponent)

2019-04-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix crash when formatting 1 / ((0 × 0)(1 / 0)^2)

2019-04-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Remove wide interval messages if final result is within precision
	* Fix options not output for "help set" in qalc
	* Rename "simplify" to "expand", to avoid confusion

2019-04-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Simplify y*f(x)+z*f(x) to (y+z)*f(x)

2019-04-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support for "portable" Windows version
